# named-pipe-rs

./: Cargo.toml
