[package]
name = "named-pipe"
version = "0.0.1"
license = "MIT OR Apache-2.0"
description = "Synchronous NamedPipe wrapper on Windows"
categories = ["os::windows-apis", "memory-management"]
keywords = ["named", "pipe", "windows"]
edition = "2021"
authors = ["masinc <masinc000@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.windows]
version = "0.28.0"
features = [
    "std",
    "Win32_System_Pipes",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
]
